es-sysctl-ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: es-sysctl-ds
  labels:
    k8s-app: es-sysctl-ds
spec:
  selector:
    matchLabels:
      agentpool: agentpool
  template:
    metadata:
      labels:
        agentpool: agentpool
    spec:
      containers:
      - command:
        - sh
        - -c
        - sysctl -w vm.max_map_count=262166 && while true; do sleep 86400; done
        image: busybox:1.26.2
        name: es-sysctl-ds
        resources:
          limits:
            cpu: 10m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 50Mi
        securityContext:
          privileged: true
      terminationGracePeriodSeconds: 1
