elasticsearch.yaml
# Configuration for deploying an API Gateway with an elasticsearch as a sidecar container to a kubernetes cluster.
# The cluster should provide at least 4 GB of main memory.
#
# The full documentation is available from the Software AG Documentation website: 
# http://techcommunity.softwareag.com/ecosystem/documentation/webmethods/api_gateway/yai10-4/index.htm
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
  labels:
    app: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-deployment
  template:
    metadata:
      labels:
        app: elasticsearch-deployment
    spec:
      volumes:
      - name: data-volume
        persistentVolumeClaim:
          claimName: elastic-data
      containers:
      # The elasticsearch container
      - name: elastic-search
        image: 'docker.elastic.co/elasticsearch/elasticsearch:7.13.1'
        ports:
          - name: 9200tcp00
            containerPort: 9200
            protocol: TCP
        resources:
          limits:
            memory: 4Gi
          requests:
            cpu: '1'
            memory: 4Gi
        volumeMounts:
        - name: data-volume
          mountPath: /usr/share/elasticsearch/data
        livenessProbe:
            tcpSocket:
              port: 9200
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 9200
            initialDelaySeconds: 25
            timeoutSeconds: 2
            periodSeconds: 2
            successThreshold: 2
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext:
        fsGroup: 1000
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
# An example service for the deployment above.
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  labels:
    app.kubernetes.io/name: elasticsearch-deployment
spec:
  ports:
    - name: http1
      protocol: TCP
      port: 9200
      targetPort: 9200
  selector:
    app: elasticsearch-deployment
  type: NodePort
