fleetman-staff-service-appmesh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-staff-service
  labels:
    app: staff-service
    service: fleetman-staff-service
spec:
  selector:
    app: staff-service
  ports:
    - name: http
      port:  8080
      targetPort: 7777
  type: NodePort
