fleetman-webapp-ing.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: fleetman-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - fleetman-development.eks.au-poc.com
      secretName: fleetman-development-tls-secret
  rules:
    - host: fleetman-development.eks.au-poc.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-webapp
                port:
                  number: 80
