harbor-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: harbor-ingress
  namespace: registries
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/name: harbor
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: harbor
    meta.helm.sh/release-namespace: registries
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - harbor.eks.au-poc.com
      secretName: bitnami-harbor-ingress-cert
  rules:
    - host: harbor.eks.au-poc.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-portal
                port:
                  name: http
          - path: /api/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /service/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /v2/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /chartrepo/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
          - path: /c/
            pathType: ImplementationSpecific
            backend:
              service:
                name: harbor-core
                port:
                  name: http
