kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kiali.aks.au-poc.com
    secretName: kiali-secret
  rules:
  - host: kiali.aks.au-poc.com
    http:
      paths:
      - backend:
          serviceName: kiali
          servicePort: 20001
        path: /
