nodetours-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  nodetours
  labels:
    app: nodetours
    service: nodetours
spec:
  selector:
    app: nodetours
  type:  NodePort
  ports:
  - name:  7070http
    port:  7070
    targetPort: 7070
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodetours-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nodetours.DNS_ZONE
    secretName: nodetours-tls-secret
  rules:
  - host: nodetours.DNS_ZONE
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nodetours
              port:
                number: 7070
