nodetours.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodetours
  labels:
    app: nodetours
    version: "2.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodetours
      version: "2.0"
  template:
    metadata:
      labels:
        app: nodetours
        version: "2.0"
    spec:
      containers:
      - name: nodetours-app
        image: przemekulik/nodetours:2.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: 7777http
          containerPort: 7777
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 7777
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 7777
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 2
        resources: {}
      - name: nodetours-db
        image: mongo:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: 27017http
          containerPort: 27017
          protocol: TCP
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 27017
          timeoutSeconds: 2
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 27017
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 2
          timeoutSeconds: 2
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name:  nodetours
  labels:
    app: nodetours
    service: nodetours
spec:
  selector:
    app: nodetours
  type:  NodePort
  ports:
  - name:  7070http
    port:  7070
    targetPort: 7777
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodetours-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nodetours.DNS_ZONE
    secretName: nodetours-tls-secret
  rules:
  - host: nodetours.DNS_ZONE
    http:
      paths:
        - path: /
          backend:
            serviceName: nodetours
            servicePort: 7070
